# terrarium-epaper-ng

./: Cargo.toml  rust-toolchain.toml
.cargo/: config.toml
scripts/: connect.py  image_to_file.py
src/: lib.rs  main.rs
