[package]
edition = "2021"
name = "fuj_usb_testing"
version = "0.1.0"
license = "MIT OR Apache-2.0"

[dependencies]
embassy-stm32 = { version = "0.1.0", features = [
  "defmt",
  "stm32f303vc",
  "unstable-pac",
  "memory-x",
  "time-driver-any",
  "exti",
] }
embassy-sync = { version = "0.5.0", features = ["defmt"] }
embassy-executor = { version = "0.5.0", features = [
  "arch-cortex-m",
  "executor-thread",
  "executor-interrupt",
  "defmt",
  "integrated-timers",
] }
embassy-time = { version = "0.3.0", features = [
  "defmt",
  "defmt-timestamp-uptime",
  "tick-hz-32_768",
] }
embassy-usb = { version = "0.1.0", features = ["defmt"] }
embassy-futures = { version = "0.1.1" }
defmt = "0.3"
defmt-rtt = "0.4"

cortex-m = { version = "0.7.7", features = [
  "inline-asm",
  "critical-section-single-core",
] }
cortex-m-rt = "0.7.3"
embedded-hal = "1.0.0"
panic-probe = { version = "0.3", features = ["print-defmt"] }
futures = { version = "0.3.30", default-features = false, features = [
  "async-await",
] }
heapless = { version = "0.8", default-features = false }
nb = "1.1.0"
embedded-storage = "0.3.1"

embedded-graphics = "0.8.1"
epd-waveshare = "0.5.0"


[profile.release]
debug = 2
