[package]
edition = "2021"
name = "fuj_usb_testing"
version = "0.1.0"
license = "MIT OR Apache-2.0"


[dependencies]
embassy-sync = { version = "0.5.0", features = ["defmt"] }
embassy-nrf = { version = "0.1.0", features = [
  "defmt",
  "nrf52840",
  "time-driver-rtc1",
  "gpiote",
  "unstable-pac",
  "time",
] }
embassy-executor = { version = "0.5.0", features = [
  "task-arena-size-32768",
  "arch-cortex-m",
  "executor-thread",
  "executor-interrupt",
  "defmt",
  "integrated-timers",
] }
embassy-time = { version = "0.3.0", features = [
  "defmt",
  "defmt-timestamp-uptime",
  "tick-hz-32_768",
] }
embassy-usb = { version = "0.1.0", features = ["defmt"] }
embassy-futures = { version = "0.1.1" }
defmt = "0.3"
defmt-rtt = "0.4"

cortex-m = { version = "0.7.7", features = [
  "inline-asm",
  "critical-section-single-core",
] }
cortex-m-rt = "0.7.3"
embedded-hal = "1.0.0"
panic-probe = { version = "0.3", features = ["print-defmt"] }
futures = { version = "0.3.30", default-features = false, features = [
  "async-await",
] }
heapless = { version = "0.8", default-features = false }
nb = "1.1.0"
embedded-storage = "0.3.1"

embedded-graphics = "0.7.1"
epd-waveshare = "0.5.0"
u8g2-fonts = "0.2.0"

[patch.crates-io]
embassy-stm32 = { git = "https://github.com/embassy-rs/embassy", rev = "b7c1ad553fc093754e9ff2ca154642a3d1124b0d" }
embassy-nrf = { git = "https://github.com/embassy-rs/embassy", rev = "b7c1ad553fc093754e9ff2ca154642a3d1124b0d" }
embassy-sync = { git = "https://github.com/embassy-rs/embassy", rev = "b7c1ad553fc093754e9ff2ca154642a3d1124b0d" }
embassy-executor = { git = "https://github.com/embassy-rs/embassy", rev = "b7c1ad553fc093754e9ff2ca154642a3d1124b0d" }
embassy-time = { git = "https://github.com/embassy-rs/embassy", rev = "b7c1ad553fc093754e9ff2ca154642a3d1124b0d" }
embassy-usb = { git = "https://github.com/embassy-rs/embassy", rev = "b7c1ad553fc093754e9ff2ca154642a3d1124b0d" }
embassy-futures = { git = "https://github.com/embassy-rs/embassy", rev = "b7c1ad553fc093754e9ff2ca154642a3d1124b0d" }
embassy-embedded-hal = { git = "https://github.com/embassy-rs/embassy", rev = "b7c1ad553fc093754e9ff2ca154642a3d1124b0d" }


[profile.release]
debug = 2
